2001-07-26  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3621
	* spew.c (yylex): Only copy the token's lineno, if it is
	non-zero.

2001-07-26  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3624
	* call.c (resolve_args): Simplify, call
	convert_from_reference.
	(build_new_op): Resolve and convert from reference ARG1
	earlier. Adjust ARG2 & ARG3 resolve and conversion.

2001-07-26  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3152
	* decl.c (grokdeclarator): Detect when a function typedef is
	declaring a function, and create last_function_parms correctly.

2001-07-25  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3416
	* call.c (build_conditional_expr): Recheck args after
	conversions.
	* cp-tree.h (build_conditional_expr): Move to correct file.
	* typeck.c (decay_conversion): Diagnose any unknown types
	reaching here.
	(build_binary_op): Don't do initial decay or default
	conversions on overloaded functions.
	(build_static_cast): Don't do a decay conversion here.

2001-07-25  Jason Merrill  <jason_merrill@redhat.com>

	PR c++/3529
	Copied from mainline.
	* cvt.c (convert_lvalue): New fn.
	* cp-tree.h: Declare it.
	* method.c (do_build_assign_ref): Use it.
        (do_build_copy_constructor): Convert parm to base types
	before calling base constructors.

2001-07-25  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3543
	* typeck.c (condition_conversion): Resolve an OFFSET_REF.
	* expr.c (cplus_expand_expr): An OFFSET_REF should never get here.

2001-07-25  Nathan Sidwell  <nathan@codesourcery.com>

	* class.c (build_vbase_offset_vbtl_entries): Look for
	non-primary base of which we are a sub vtable.

2001-07-20  Daniel Berlin  <dan@cgsoftware.com>

	* Make-lang.in (cp/optimize.o): Depend on $(PARAMS_H), not
	params.h.

2001-07-18  Xavier Delacour <xavier@fmaudio.net>,
            Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* NEWS (Changes in GCC 3.0): Fix typo.

2001-07-12  Mark Mitchell  <mark@codesourcery.com>
