@@ -1,3 +1,7 @@
+2001-07-27  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.abi/vbase8-10.C: New test.
+
 2001-07-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* lib/g++.exp (g++_set_ld_library_path): Renamed to
